FEAT: 1. add ResetPassword api 2. add default casbin routes 3. add banner for dist files 4. clean up code, remove unused pkg 5. add pinia based session store 6.  add element-plus style variables and style overrides 7. add shared components table, pagination, modal and permission 8 add locales 9. add base layout 10 add login page, register page and password reset page 11.add web routes
