# server/docs/swagger.yaml
@@ -101,16 +101,15 @@ definitions:
     type: object
   request.RegisterUser:
     properties:
-      active:
-        type: integer
+      code:
+        description: use email verification instead
+        type: string
       email:
         description: HeaderImg    string `json:"headerImg" gorm:"default:'https://qmplusimg.henrongyi.top/gva_header.jpg'"`
         type: string
       password:
         type: string
       role:
-        description: Captcha string `json:"captcha" binding:"required"`  // use email
-          verification instead
         type: integer
       roles:
         items:
@@ -119,9 +118,27 @@ definitions:
       username:
         type: string
     required:
+    - code
     - email
     - password
     - username
+    type: object
+  request.ResetPassword:
+    properties:
+      code:
+        type: string
+      newPassword:
+        type: string
+    required:
+    - code
+    - newPassword
+    type: object
+  request.SendEmail:
+    properties:
+      email:
+        type: string
+    required:
+    - email
     type: object
   request.UpdateCasbin:
     properties:
@@ -139,6 +156,11 @@ definitions:
       captcha:
         type: string
     type: object
+  response.Login:
+    properties:
+      user:
+        $ref: '#/definitions/dbTable.User'
+    type: object
   response.Paging:
     properties:
       list: {}
@@ -151,9 +173,9 @@ definitions:
     type: object
   response.Response:
     properties:
-      code:
-        type: integer
       data: {}
+      errorCode:
+        type: integer
       msg:
         type: string
     type: object
@@ -210,7 +232,7 @@ paths:
             - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/dbTable.User'
+                  $ref: '#/definitions/response.Login'
                 msg:
                   type: string
               type: object
@@ -248,6 +270,13 @@ paths:
     post:
       consumes:
       - application/json
+      parameters:
+      - description: email
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.SendEmail'
       produces:
       - application/json
       responses:
@@ -397,6 +426,30 @@ paths:
                   type: string
               type: object
       summary: Edit user info
+      tags:
+      - User
+  /api/v1/user/resetPassword:
+    put:
+      parameters:
+      - description: New pw, email code
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.ResetPassword'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Reset password
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      summary: Reset user password
       tags:
       - User
   /api/v1/user/userList:
