# server/model/request/auth.go
@@ -1,0 +1,5 @@
+package request
+
+type SendEmail struct {
+	Email string `json:"email" binding:"required"`
+}
