# server/model/request/casbin.go
@@ -14,5 +14,9 @@ func DefaultCasbin() []Endpoint {
 	return []Endpoint{
 		//TODO: add more default routes
 		{Path: "/api/v1/user/userList", Method: "GET"},
+		{Path: "/api/v1/user/resetPassword", Method: "PUT"},
+		{Path: "/api/v1/user/edit", Method: "PUT"},
+		{Path: "/api/v1/user/active", Method: "POST"},
+		{Path: "/api/public/auth/register", Method: "POST"},
 	}
 }
